# block-chain

./: .gitignore  Cargo.toml  README.md  bsc.txt  btc.txt  ledger.txt
flux-chain/: Cargo.toml
flux-chain/src/: main.rs
flux-chain/src/flux_chain/: block.rs  ledger.rs  mod.rs  protocol.rs  transaction.rs  types.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/blockchain/: block.rs  ledger.rs  mod.rs  protocol.rs  transaction.rs
src/: block.rs  ledger.rs  lib.rs  protocol.rs  transaction.rs
test_pro/: Cargo.toml
test_pro/src/: main.rs  transaction.rs
testchain/: Cargo.toml
testchain/src/: blockchain.rs  main.rs
testchain/src/blockchain/: blockchain.rs  mod.rs  transaction.rs
