[package]
name = "testchain"
version = "0.1.0"
authors = ["professor_flux <sauravrax02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" , version = "0.1.0" }
openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }
chrono = { version = "0.4" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
